# chandra-pdf-extract

./: .gitignore  README.md  local.env.example  pyproject.toml
scripts/: benchmark-concurrency.sh  install-vllm.sh  run-vllm.sh
src/chandra_pdf_extract/: __init__.py  __main__.py  cli.py  engine.py  pagespec.py  pdf_render.py
