[project]
name = "chandra-pdf-extract"
version = "0.1.0"
description = "Extract text/layout from PDFs with Chandra OCR using vLLM backend."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "chandra-ocr[vllm]>=0.2.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
chandra-extract-pdf = "chandra_pdf_extract.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
